--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joyeux Anniversaire ACHI</title>
+    
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -18,11 +19,18 @@
             margin: 2rem auto;
             background-color: #fff;
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            border-radius: 10px;
         }
         img {
             max-width: 100%;
             height: auto;
             border-radius: 10px;
+            filter: hue-rotate(300deg) saturate(1.5);
+            transition: transform 0.5s ease, box-shadow 0.5s ease;
+        }
+        img:hover {
+            transform: scale(1.05);
+            box-shadow: 0 0 20px rgba(255, 20, 147, 0.8);
         }
         h1, p {
             color: #333;
